syntax = "proto3";

package todo;

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto"; // Import annotations

option go_package = "/pb"; 

service TodoService {
    rpc AddTask (AddTaskRequest) returns (TaskResponse) {
        option (google.api.http) = {
            post: "/task"
            body: "*"
        };
    }
    rpc GetTasks (GetTasksRequest) returns (GetTasksResponse) {
        option (google.api.http) = {
            get: "/task/all"
        };
    }
    rpc CompleteTask (CompleteTaskRequest) returns (TaskResponse) {
        option (google.api.http) = {
            patch: "/task/{id}"
            body: "*"
        };
    }
}

message Task {
    int32 id = 1;
    string title = 2;
    string description = 3;
    bool is_completed = 4;
    google.protobuf.Timestamp updated_at = 5;
    google.protobuf.Timestamp created_at = 6;
}

message AddTaskRequest {
    string title = 1;
    string description = 2;
}

message CompleteTaskRequest {
    int32 id = 1;
}

message TaskResponse {
    Task task = 1;
}

message GetTasksRequest {}

message GetTasksResponse {
    repeated Task tasks = 1;
}
